<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pedromoreirareisgmail.pchat.RegisterActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <include
            android:id="@+id/toolbar_register"
            layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_register_nome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_edit_text"
            android:layout_marginStart="@dimen/margin_edit_text"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_register">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_register_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nome"
                android:inputType="text|textCapWords"
                android:paddingEnd="@dimen/padding_edit_text"
                android:paddingStart="@dimen/padding_edit_text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_register_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/til_register_nome"
            app:layout_constraintStart_toStartOf="@+id/til_register_nome"
            app:layout_constraintTop_toBottomOf="@+id/til_register_nome">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingEnd="@dimen/padding_edit_text"
                android:paddingStart="@dimen/padding_edit_text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_register_senha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/til_register_email"
            app:layout_constraintStart_toStartOf="@+id/til_register_email"
            app:layout_constraintTop_toBottomOf="@+id/til_register_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_register_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_senha"
                android:inputType="textPassword"
                android:paddingEnd="@dimen/padding_edit_text"
                android:paddingStart="@dimen/padding_edit_text" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/but_register_criar_conta"
            style="@style/style_but_primary_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/but_criar_conta"
            app:layout_constraintEnd_toEndOf="@+id/til_register_senha"
            app:layout_constraintStart_toStartOf="@+id/til_register_senha"
            app:layout_constraintTop_toBottomOf="@+id/til_register_senha" />




    </android.support.constraint.ConstraintLayout>
</layout>