<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pedromoreirareisgmail.pchat.StatusActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar_status"
            layout="@layout/toolbar_layout" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_status_nome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_status_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg_xml_status_digite_seu_nome"
                android:paddingEnd="@dimen/padding_edit_text"
                android:paddingStart="@dimen/padding_edit_text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_status_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_edit_text"
            android:layout_marginStart="@dimen/margin_edit_text"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_status_nome">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_status_valor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg_xml_status_digite_seu_status"
                android:paddingEnd="@dimen/padding_edit_text"
                android:paddingStart="@dimen/padding_edit_text" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/but_status_salvar"
            style="@style/style_but_primary_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/but_status_salvar"
            app:layout_constraintEnd_toEndOf="@+id/til_status_status"
            app:layout_constraintStart_toStartOf="@+id/til_status_status"
            app:layout_constraintTop_toBottomOf="@+id/til_status_status" />


    </android.support.constraint.ConstraintLayout>
</layout>