<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pedromoreirareisgmail.pchat.SettingsActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient">

        <include
            android:id="@+id/toolbar_settings"
            layout="@layout/toolbar_layout" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_settings_imagem"
            android:layout_width="216dp"
            android:layout_height="216dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/image_description_settings_nome"
            android:elevation="16dp"
            android:src="@drawable/ic_usuario"
            app:civ_border_color="@color/colorWhite"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_settings" />

        <TextView
            android:id="@+id/tv_settings_nome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/civ_settings_imagem" />

        <TextView
            android:id="@+id/tv_settings_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="3"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_settings_nome"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_settings_nome"
            app:layout_constraintTop_toBottomOf="@+id/tv_settings_nome" />

        <Button
            android:id="@+id/but_settings_imagem"
            style="@style/style_but"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/but_imagem"
            android:text="@string/but_settings_imagem"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toTopOf="@+id/but_settings_status"
            app:layout_constraintEnd_toEndOf="@+id/but_settings_status"
            app:layout_constraintStart_toStartOf="@+id/but_settings_status" />

        <Button
            android:id="@+id/but_settings_status"
            style="@style/style_but"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_but_lr"
            android:layout_marginEnd="@dimen/margin_but_lr"
            android:layout_marginStart="@dimen/margin_but_lr"
            android:background="@drawable/but_status"
            android:text="@string/but_settings_status"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

</layout>